tests/parsing/smtlib/v2.6/errors/092_get-info_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/092_get-info_unclosed_1.smt2", line 2, character 15-16:
2 | (get-info :foo _)
                   ^
Error while parsing a get-info command, read the reserved word '_',
      but expected a closing parenthesis.
